fixing pop up behind nav mobile

--- a/Creatorsblueprint-Project/src/Nav/Nav.module.css
+++ b/Creatorsblueprint-Project/src/Nav/Nav.module.css
@@ -141,9 +141,9 @@
         width: 60%;
         height: 100%;
         background: rgba(255, 255, 255);
-        backdrop-filter: blur(5px);          /* blur the content behind */
-        -webkit-backdrop-filter: blur(5px);
-        border: 1px solid rgb(238, 238, 238); /* subtle border */
+       
+        
+        border: 1px solid rgb(238, 238, 238); 
         box-shadow: 4px 4px 20px rgb(220, 220, 220);
         border-bottom-left-radius: 25px;
         border-top-left-radius: 25px;
@@ -151,7 +151,7 @@
         top: 0;
         right: 0;
         padding: 2rem;
-        z-index: 1000;
+        z-index: 100;
         display: grid;
         grid-template-columns: minmax(0, 100%);
         grid-template-rows: 10rem 1fr auto;
